# smugglex

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  IMPLEMENTATION.md  README.md  codecov.yml  flake.nix  index.html  justfile  llms.txt  robots.txt  search.json  search_index.en.js  sitemap.xml
.github/: copilot-instructions.md
.github/agents/: documents.agent.md
.github/workflows/: cd-aur.yml  cd-dockerhub.yml  cd-ghcr.yml  cd-homebrew-tap.yml  cd-release-asset.yml  cd-release-deb.yml  cd-release.yml  ci-contributors.yml  ci.yml  goyo-update.yml  hwaro.yml  release-deb.yml  zola.yml
advanced/: index.html
advanced/exploitation/: index.html
advanced/exploiting/: index.html
advanced/fingerprinting/: index.html
advanced/fuzzing/: index.html
advanced/performance-tips/: index.html
advanced/pipeline/: index.html
aur/: PKGBUILD
checks/: index.html
docs/: AGENTS.md  config.toml
getting-started/: index.html
js/: site.js
lab/: README.md  validate.cr  validate.py
reference/: index.html
scripts/: version_check.cr  version_update.cr
snap/: snapcraft.yaml
src/: cli.rs  error.rs  exploit.rs  fingerprint.rs  http.rs  http2.rs  lib.rs  main.rs  model.rs  mutator.rs  output.rs  payloads.rs  raw_request.rs  sarif.rs  scanner.rs  utils.rs
support/: index.html
tests/: cli_tests.rs  error_tests.rs  exploit_tests.rs  fingerprint_tests.rs  harness_tests.rs  http_tests.rs  main_tests.rs  model_tests.rs  mutator_tests.rs  output_tests.rs  payloads_tests.rs  sarif_tests.rs  scanner_tests.rs  utils_tests.rs
usage/: index.html
(+105 files in other folders)
