[package]
name = "smugglex"
version = "0.0.1"
edition = "2024"
authors = ["hahwul"]
description = "HTTP Request Smuggling"
license = "MIT"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.18.3"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
url = "2.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
chrono = "0.4"
once_cell = "1.21"
